[package]
name = "piet_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
itertools = "0.10.3"
num-bigint = "0.4.3"
num-derive = "0.3"
num-integer = "0.1.45"
num-traits = "0.2"

[dev-dependencies]
assert_matches = "1.5"
